plex/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: plex-service
          servicePort: pms
